Fixed #4278